LCC-12 - Addded login and registration forms, basic routing